--- a/frontend/src/layouts/BaseLayout.astro
+++ b/frontend/src/layouts/BaseLayout.astro
@@ -28,5 +28,9 @@ const {
       <slot />
     </main>
     <Footer />
+
+    <script>
+      import "../scripts/scroll-reveal";
+    </script>
   </body>
 </html>
