--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -2,16 +2,19 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { HeroSection } from "../components/index/HeroSection";
 import ServicesSection from "../components/index/ServicesSection.astro";
-
 import BlogSection from "../components/index/BlogSection.astro";
 import ContactSection from "../components/index/ContactSection.astro";
-//import { PortfolioSection } from "../components/index/PortfolioSection";
 import PortfolioSection from "../components/index/PortfolioSection/PortfolioSection.astro";
+
+import { getAllServices } from "../services/servicesService";
+import type { Service } from "../sanity/types/services";
+
+const allServices: Service[] = await getAllServices();
 ---
 
 <BaseLayout>
   <HeroSection client:load />
-  <ServicesSection />
+  <ServicesSection services={allServices} />
   <PortfolioSection />
   <BlogSection />
   <ContactSection />
