--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -8,14 +8,16 @@ import PortfolioSection from "../components/index/PortfolioSection/PortfolioSect
 
 import { getAllServices } from "../services/servicesService";
 import type { Service } from "../sanity/types/services";
-
 const allServices: Service[] = await getAllServices();
+
+import { getAllPortfolioProjects } from "../services/portfolioService";
+const portfolioProjects = await getAllPortfolioProjects();
 ---
 
 <BaseLayout>
   <HeroSection client:load />
   <ServicesSection services={allServices} />
-  <PortfolioSection />
+  <PortfolioSection projects={portfolioProjects} />
   <BlogSection />
   <ContactSection />
 </BaseLayout>
