--- a/frontend/src/layouts/BaseLayout.astro
+++ b/frontend/src/layouts/BaseLayout.astro
@@ -42,6 +42,7 @@ const {
       ogType={ogType}
       schema={schema}
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body
     class="min-h-screen flex flex-col bg-background text-foreground antialiased"
